--- a/index.html
+++ b/index.html
@@ -64,30 +64,28 @@
 						<h5 class="description">AllergyHelp reprezintă o platformă bazată pe o bază de date a alergiilor ce poate oferi diverse informații despre aceasta. Datorită acestei platforme, aveți acces la următoarele informații:</h5>
 					</div>
 				</div>
-				<div class="features">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="info">
-								<i class="fa fa-allergies text-success"></i>
-								<h4 class="info-title">Baza de date a alergiilor</h4>
-								<p>Odată înregistrat pe site, vei avea acces la întreaga bază de date a alergiilor ce se actualizează periodic.</p>
-							</div>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="info">
+							<i class="fa fa-allergies text-success"></i>
+							<h4 class="info-title">Baza de date a alergiilor</h4>
+							<p>Odată înregistrat pe site, vei avea acces la întreaga bază de date a alergiilor ce se actualizează periodic.</p>
 						</div>
-						<div class="col-md-4">
-							<div class="info">
-								<i class="fa fa-pills text-danger"></i>
-								<h4 class="info-title">Tratemente</h4>
-								<p>Pentru fiecare alergie oferim și câte un tratament recomandat de doctori și farmaciști.</p>
-							</div>
+					</div>
+					<div class="col-md-4">
+						<div class="info">
+							<i class="fa fa-pills text-danger"></i>
+							<h4 class="info-title">Tratemente</h4>
+							<p>Pentru fiecare alergie oferim și câte un tratament recomandat de doctori și farmaciști.</p>
 						</div>
-						<div class="col-md-4">
-							<div class="info">
-								<i class="fa fa-comment-dots text-info"></i>
-								<h4 class="info-title">Suport</h4>
-								<p>Dacă nu găsești informația dorită pe AllergyHelp, ai posibilitatea de a ne contacta pentru ajutor.</p>
-							</div>
+					</div>
+					<div class="col-md-4">
+						<div class="info">
+							<i class="fa fa-comment-dots text-info"></i>
+							<h4 class="info-title">Suport</h4>
+							<p>Dacă nu găsești informația dorită pe AllergyHelp, ai posibilitatea de a ne contacta pentru ajutor.</p>
 						</div>
-				    </div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -109,309 +107,90 @@
 								Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive pentru majoritatea oamenilor.
 								<br />Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.
 							</p>
-					
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="container padding">
-			<div class="row welcome text-center">
-				<div class="col-12">
-					<h1 class="display-4">Good To Know</h1>
-				</div>
-				<hr>
-				<div class="col-12">
-							<p class="lead">Alergia este cea mai comuna boala cronica din Europa. Pana la 20% dintre pacientii cu alergii lupta in fiecare zi cu frica
-								de o posibila criza de astm, un soc anafilatic, sau chiar moartea de la o reactie alergica.
-							</p>
+			<div class="tip">
+				<div class="container">
+					<strong>Bine de știut!</strong>
+					<br />
+					Alergia este cea mai comună boală cronică din Europa. Până la 20% dintre pacienții cu alergii luptă în fiecare zi cu frica de o posibilă criză de astm, un șoc anafilatic sau chiar moartea de la o reacție alergică.
 				</div>
 			</div>
 		</div>
-			<div class="container-fluid padding">
-		<div class="carousel slide" id="slides" data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-				<div class="row text-center padding jumbotron">
-				<div class="col-xs-12 col-sm-6 col-md-4">
-				<i class="fas fa-allergies"></i>
-				<h3>Alergiile</h3>
-				<p>-sunt a sasea cauza a bolilor cronice din USA</p>
-			</div>
-
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<i class="fas fa-globe"></i>
-				<h3>La nivel mondial</h3>
-				<p>-rinita alergica afecteaza intre 10% si 30% din popultie</p>
-			</div>
-
-
-			<div class="col-sm-12 col-md-4">
-				<i class="fas fa-money-bill-alt"></i>
-				<h3>Costul</h3>
-						<p>-anual al alergiilor depaseste 18 miliarde de dolari</p>
-			</div>
-		</div>
-	</div>
-
-		<!--- Welcome Section -->
-		<div class="container padding">
-			<div class="row welcome text-center">
-				<div class="col-12">
-					<h1 class="display-4">Text frumos</h1>
-				</div>
-				<hr>
-				<div class="col-12">
-					<p class="lead">Bacon ipsum dolor amet meatball boudin ground round strip steak tri-tip rump bresaola meatloaf meatball boudin ground
-						round strip steak tri-tip rump bresaola meatloaf turkey doner shank.
-					</p>
-				</div>
-			</div>
-		</div>
-
-		<!--- 3 Column Section -->
-		<div class="container padding">
-			<div class="row text-center padding">
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<i class="fas fa-allergies"></i>
-					<h3>Alergie</h3>
-					<p>Bacon ipsum dolor amet meatball</p>
-				</div>
-
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<i class="fas fa-user-md"></i>
-					<h3>Tratamente</h3>
-					<p>Bacon ipsum dolor amet meatball</p>
-				</div>
-
-
-				<div class="col-sm-12 col-md-4">
-					<i class="fas fa-heart"></i>
-					<h3>Care
-						<3</h3>
-							<p>Bacon ipsum dolor amet meatball</p>
-				</div>
-			</div>
-			<hr class="my-4">
-		</div>
-
-		<!--- 2 Column Section -->
-		<hr class="my-4">
-
-		<!--- Cards Title -->
-		<div class="container padding">
-			<div class="row welcome text-center">
-				<div class="col-12">
-					<h1 class="display-4">Diverse Alergii</h1>
-				</div>
-			</div>
-		</div>
-
-		<!--- Cards Section -->
-		<div class="container padding">
-			<div class="row padding">
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" src="assets/img/rsz_alergia-la-polen.jpg">
-						<div class="card-body">
-							<h4 class="card-title">Rinita Alergică</h4>
-							<p class="card-text">Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este
-								în creștere, din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru
-								tratarea infecțiilor respiratorii în copilarie.</p>
-							<a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-						</div>
+		<div class="section section-image" style="background-image: url('assets/img/crowded-station.jpg')">
+			<div class="container text-center">
+				<div class="row">
+					<div class="col-md-4">
+						<h3 class="title mb-0">Alergiile</h3>
+						Sunt a șasea cauză a bolilor cronice din USA.
 					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" src="assets/img/astm1.jpg">
-						<div class="card-body">
-							<h4 class="card-title">Astmul Bronșic</h4>
-							<p class="card-text">Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere.
-								În România, prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se
-								estimeaza ca 60% sunt la copii și tineri.</p>
-							<a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-						</div>
+					<div class="col-md-4">
+						<h3 class="title mb-0">La nivel mondial</h3>
+						Rinita alergică afectează între 10% și 30% din populație.
 					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" src="assets/img/rsz_dermatita.jpg">
-						<div class="card-body">
-							<h4 class="card-title">Dermatita Atopică</h4>
-							<p class="card-text">Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu
-								vârsta în 80% din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime
-								a pielii.</p>
-							<a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" src="assets/img/rsz_dermac.jpg">
-						<div class="card-body">
-							<h4 class="card-title">Dermatita de contatct</h4>
-							<p class="card-text">Este o reacție alergică localizată, produsă de contactul dintre un alergen și tegumentul unei persoane. Se manifestă
-								prin erupție localizată la locul de contact, de tip eczematos, de multe ori cu vezicule și edem.</p>
-							<a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" src="assets/img/rsz_food.jpg">
-						<div class="card-body">
-							<h4 class="card-title">Alergia Alimentară</h4>
-							<p class="card-text">Este o reacție de hipersensibilitate mediată imun (reacție a sistemului imunitar) , o apărare exagerată a organismului
-								declanșată în urma ingestiei unor alimente sau aditivi alimentari, considerați periculoși de către organism.</p>
-							<a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" src="assets/img/rsz_1intoleranta.jpg">
-						<div class="card-body">
-							<h4 class="card-title">Intoleranță Alimetară</h4>
-							<p class="card-text">Este o hipersensibilitate individuală la un aliment pe care cei mai mulți oameni îl tolerează fără probleme.
-								Se manifestă în special la nivelul sistemului digestiv, având ca și consecințe: inflamația intestinală și scăderea
-								secreției de serotonină în intestine. </p>
-							<a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-
-		<!--- 2 Column Section -->
-		<div class="container padding">
-			<div class="row padding">
-				<div class="col-md-12 col-lg-6">
-					<h2>Text mare</h2>
-					<p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
-						spare ribs strip steak turkey.</p>
-
-					<p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
-						t-bone chicken shankle.</p>
-					<br>
-				</div>
-				<div class="col-lg-6">
-					<img src="assets/img/placeholder3.png" class="img-fluid">
-				</div>
-			</div>
-		</div>
-
-		<!--- Social Media -->
-
-		<section id="contact">
-
-			<div class="social-links">
-				<div class="container padding">
-					<div class="row text-center padding">
-						<div class="col-12">
-							<h1>Contactează-ne</h1>
-						</div>
-						<div class="col-12 social padding">
-							<a href="#">
-								<i class="fab fa-facebook"></i>
-							</a>
-							<a href="#">
-								<i class="fab fa-twitter"></i>
-							</a>
-							<a href="#">
-								<i class="fab fa-google-plus-g"></i>
-							</a>
-							<a href="#">
-								<i class="fab fa-youtube"></i>
-							</a>
-						</div>
+					<div class="col-md-4">
+						<h3 class="title mb-0">Costurile</h3>
+						Anuale ale alergiilor depășește 18 miliarde de dolari.
 					</div>
 				</div>
 			</div>
-
-			<!--- Contact Us -->
+		</div>
+		<div class="section">
 			<div class="container">
-				<div class="row justify-content-center">
-
-					<div class="col-lg-3 col-md-4">
-
-						<div class="info">
-							<div>
-								<i class="fas fa-map-marker"></i>
-								<p>Str. Străzilor, Iași, România</p>
+				<h2 class="title text-center">Noutăți</h2>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/rsz_alergia-la-polen.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/rsz_alergia-la-polen.jpg'); opacity: 1;"></div>
 							</div>
-
-							<div>
-								<i class="fas fa-envelope"></i>
-								<p>discodeteam@gmail.com</p>
-							</div>
-
-							<div>
-								<i class="fas fa-phone"></i>
-								<p>+40 723 456 789</p>
-							</div>
+							<h3 class="card-title">
+								Rinita alergică
+							</h3>
+							<p class="card-description">
+								Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este în creștere, din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru tratarea infecțiilor respiratorii în copilarie.
+							</p>
 						</div>
-
 					</div>
-
-					<div class="col-lg-5 col-md-8">
-						<div class="form">
-							<div id="sendmessage">Vă mulțumim pentru feedback!</div>
-							<div id="errormessage"></div>
-							<form action="" method="post" role="form" class="contactForm">
-								<div class="form-group">
-									<input type="text" name="name" class="form-control" id="name" placeholder="Nume" data-rule="minlen:4" data-msg="Va rugam introduceti minim 4 caractere"
-									/>
-									<div class="validation"></div>
-								</div>
-								<div class="form-group">
-									<input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Va rugam introduceti un email valid."
-									/>
-									<div class="validation"></div>
-								</div>
-								<div class="form-group">
-									<input type="text" class="form-control" name="subject" id="subject" placeholder="Titlu" data-rule="minlen:4" data-msg="Va rugam introduceti minim 4 caractere"
-									/>
-									<div class="validation"></div>
-								</div>
-								<div class="form-group">
-									<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Va rugam sa completati acest camp"
-										placeholder="Mesaj"></textarea>
-									<div class="validation"></div>
-								</div>
-								<div class="text-center">
-									<button type="submit">Trimite</button>
-								</div>
-							</form>
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/astm1.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/astm1.jpg'); opacity: 1;"></div>
+							</div>
+							<h3 class="card-title">
+								Astmul bronșic
+							</h3>
+							<p class="card-description">
+								Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere. În România, prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se estimeaza ca 60% sunt la copii și tineri.
+							</p>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/rsz_dermatita.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/rsz_dermatita.jpg'); opacity: 1;"></div>
+							</div>
+							<h3 class="card-title">
+								Dermatita atopică
+							</h3>
+							<p class="card-description">
+								Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu vârsta în 80% din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime a pielii.
+							</p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 	</div>
-
-	<!--- Footer -->
-	<footer id="footer">
-		<div class="footer-top">
-			<div class="container"></div>
-		</div>
-
-		<div class="container">
-			<div class="copyright">
-				&copy; Copyright
-				<strong>AllergyHelp</strong>. All Rights Reserved
-			</div>
-			<div class="credits">
-				Aplicație realizată de
-				<a href="#">Discode Team</a>
-			</div>
-		</div>
+	<footer class="text-center m-2">
+		<small>
+			Realizat pentru <strong><a href="https://fiicode.asii.ro/" target="_blank" rel="noopener">FIICode 2018</a></strong> de către echipa <strong>Discode</strong>.
+		</small>
 	</footer>
 </body>
 
