--- a/index.html
+++ b/index.html
@@ -43,29 +43,25 @@
 			</div>
 		</div>
 	</nav>
-
 	<div class="page-header page-header-filter" data-parallax="true">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-9 col-xl-6">
 					<h1 class="title">Protejează-te împotriva alergiilor</h1>
-					<h4>Cu ajutorul nostru poți afla ultimele noutăți despre alergiile de orice tip, inclusiv despre simptomele și cauzele acestora.
-						Doar selectezi simptomele și vei primi automat informații!</h4>
+					<h4>Cu ajutorul nostru poți afla ultimele noutăți despre alergiile de orice tip, inclusiv despre simptomele și cauzele acestora. Doar selectezi simptomele și vei primi automat informații!</h4>
 					<br />
 					<a href="#" class="btn-get-started">Înscrie-te acum</a>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<div class="main">
 		<div class="section" id="introducere">
 			<div class="container text-center">
 				<div class="row">
 					<div class="col-md-9 ml-auto mr-auto">
 						<h2 class="title">Ce reprezintă AllergyHelp?</h2>
-						<h5 class="description">AllergyHelp reprezintă o platformă bazată pe o bază de date a alergiilor ce poate oferi diverse informații despre aceasta.
-							Datorită acestei platforme, aveți acces la următoarele informații:</h5>
+						<h5 class="description">AllergyHelp reprezintă o platformă bazată pe o bază de date a alergiilor ce poate oferi diverse informații despre aceasta. Datorită acestei platforme, aveți acces la următoarele informații:</h5>
 					</div>
 				</div>
 				<div class="row">
@@ -108,12 +104,8 @@
 								Ce sunt alergiile?
 							</h3>
 							<p class="card-description">
-								Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt
-								cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice
-								(polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe,
-								care sunt inofensive pentru majoritatea oamenilor.
-								<br />Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele
-								manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.
+								Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive pentru majoritatea oamenilor.
+								<br />Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.
 							</p>
 						</div>
 					</div>
@@ -122,18 +114,19 @@
 			<div class="tip">
 				<div class="container">
 					<strong>Bine de știut!</strong>
-					<br /> Alergia este cea mai comună boală cronică din Europa. Până la 20% dintre pacienții cu alergii luptă în fiecare zi cu
-					frica de o posibilă criză de astm, un șoc anafilatic sau chiar moartea de la o reacție alergică.
+					<br /> Alergia este cea mai comună boală cronică din Europa. Până la 20% dintre pacienții cu alergii luptă în fiecare zi cu frica de o posibilă criză de astm, un șoc anafilatic sau chiar moartea de la o reacție alergică.
 				</div>
 			</div>
 		</div>
 		<div class="section section-image" id="statistica" style="background-image: url('assets/img/crowded-station.jpg')">
-			<div id="slides" class="carousel-slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#slides" data-slide-to="0" class="active"></li>
-					<li data-target="#slides" data-slide-to="1"></li>
-					<li data-target="#slides" data-slide-to="2"></li>
-				</ol>
+			<div class="container">
+				<div id="slides" class="carousel-slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#slides" data-slide-to="0" class="active"></li>
+						<li data-target="#slides" data-slide-to="1"></li>
+						<li data-target="#slides" data-slide-to="2"></li>
+					</ol>
+				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<div class="container text-center">
@@ -194,77 +187,51 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
-
-	<div class="carousel-item">
-		<div class="container text-center">
-			<div class="row">
-				<div class="col-md-4">
-					<h3 class="title mb-0">Alergiile</h3>
-					Sunt a șasea cauză a bolilor cronice din USA.
-				</div>
-				<div class="col-md-4">
-					<h3 class="title mb-0">La nivel mondial</h3>
-					Rinita alergică afectează între 10% și 30% din populație.
-				</div>
-				<div class="col-md-4">
-					<h3 class="title mb-0">Costurile</h3>
-					Anuale ale alergiilor depășește 18 miliarde de dolari.
-				</div>
-			</div>
-		</div>
-	</div>
-	</div>
-	<div class="section" id="noutati">
-		<div class="container">
-			<h2 class="title text-center">Noutăți</h2>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="card card-plain">
-						<div class="card-header card-header-image">
-							<img class="img" src="assets/img/rsz_alergia-la-polen.jpg">
-							<div class="colored-shadow" style="background-image: url('assets/img/rsz_alergia-la-polen.jpg'); opacity: 1;"></div>
+		<div class="section" id="noutati">
+			<div class="container">
+				<h2 class="title text-center">Noutăți</h2>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/rsz_alergia-la-polen.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/rsz_alergia-la-polen.jpg'); opacity: 1;"></div>
+							</div>
+							<h3 class="card-title">
+								Rinita alergică
+							</h3>
+							<p class="card-description">
+								Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este în creștere, din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru tratarea infecțiilor respiratorii în copilarie.
+							</p>
 						</div>
-						<h3 class="card-title">
-							Rinita alergică
-						</h3>
-						<p class="card-description">
-							Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este în creștere,
-							din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru tratarea infecțiilor
-							respiratorii în copilarie.
-						</p>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card card-plain">
-						<div class="card-header card-header-image">
-							<img class="img" src="assets/img/astm1.jpg">
-							<div class="colored-shadow" style="background-image: url('assets/img/astm1.jpg'); opacity: 1;"></div>
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/astm1.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/astm1.jpg'); opacity: 1;"></div>
+							</div>
+							<h3 class="card-title">
+								Astmul bronșic
+							</h3>
+							<p class="card-description">
+								Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere. În România, prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se estimeaza ca 60% sunt la copii și tineri.
+							</p>
 						</div>
-						<h3 class="card-title">
-							Astmul bronșic
-						</h3>
-						<p class="card-description">
-							Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere. În România,
-							prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se estimeaza ca 60% sunt
-							la copii și tineri.
-						</p>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card card-plain">
-						<div class="card-header card-header-image">
-							<img class="img" src="assets/img/rsz_dermatita.jpg">
-							<div class="colored-shadow" style="background-image: url('assets/img/rsz_dermatita.jpg'); opacity: 1;"></div>
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/rsz_dermatita.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/rsz_dermatita.jpg'); opacity: 1;"></div>
+							</div>
+							<h3 class="card-title">
+								Dermatita atopică
+							</h3>
+							<p class="card-description">
+								Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu vârsta în 80% din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime a pielii.
+							</p>
 						</div>
-						<h3 class="card-title">
-							Dermatita atopică
-						</h3>
-						<p class="card-description">
-							Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu vârsta în 80%
-							din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime a pielii.
-						</p>
 					</div>
 				</div>
 			</div>
@@ -274,7 +241,7 @@
 			<div class="row">
 					<div class="col-md-10 ml-auto mr-auto">
 						<h2 class="title">Echipa Discode</h2>
-						<h5 class="description">Noi suntem Discode, o echipă formată din patru elevi de la <strong>Liceul Teoretic de Informatică "Grigore Moisil" Iași</strong>.</h5>
+						<h5 class="description">Noi suntem <strong>Discode</strong>, o echipă formată din patru elevi de la <strong>Liceul Teoretic de Informatică "Grigore Moisil" Iași</strong>.</h5>
 					</div>
 				</div>
 				<div class="row">
@@ -287,9 +254,9 @@
 								<h4 class="card-title">Iacob Octavian</h4>
 							</div>
 							<div class="card-footer justify-content-center">
-								<a href="#"><i class="fab fa-facebook-square"></i></a>
-								<a href="#"><i class="fab fa-instagram"></i></a>
-								<a href="#"><i class="fab fa-github"></i></a>
+								<a href="https://www.facebook.com/octavzz" target="_blank" rel="noopener""><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.instagram.com/octavzz" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+								<a href="https://github.com/Octavzz" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
 							</div>
 						</div>
 					</div>
@@ -302,9 +269,9 @@
 								<h4 class="card-title">Negru Parascheva</h4>
 							</div>
 							<div class="card-footer justify-content-center">
-								<a href="#"><i class="fab fa-facebook-square"></i></a>
-								<a href="#"><i class="fab fa-instagram"></i></a>
-								<a href="#"><i class="fab fa-github"></i></a>
+								<a href="https://www.facebook.com/parascheva.negru" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.instagram.com/paraschevanegru" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+								<a href="https://github.com/paraschevanegru" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
 							</div>
 						</div>
 					</div>
@@ -317,9 +284,9 @@
 								<h4 class="card-title">Scurtu Claudiu</h4>
 							</div>
 							<div class="card-footer justify-content-center">
-								<a href="#"><i class="fab fa-facebook-square"></i></a>
-								<a href="#"><i class="fab fa-instagram"></i></a>
-								<a href="#"><i class="fab fa-github"></i></a>
+								<a href="https://www.facebook.com/claudiu.scurtu" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.instagram.com/claudiuscurtu" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+								<a href="https://github.com/isoon5" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
 							</div>
 						</div>
 					</div>
@@ -332,9 +299,9 @@
 								<h4 class="card-title">Toderică Alexandru</h4>
 							</div>
 							<div class="card-footer justify-content-center">
-								<a href="#"><i class="fab fa-facebook-square"></i></a>
-								<a href="#"><i class="fab fa-instagram"></i></a>
-								<a href="#"><i class="fab fa-github"></i></a>
+								<a href="https://www.facebook.com/alexandru.toderica" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.instagram.com/toderrrica" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+								<a href="https://github.com/toderica" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
 							</div>
 						</div>
 					</div>
@@ -342,15 +309,8 @@
 			</div>
 		</div>
 	</div>
-	</div>
 	<footer class="text-center m-2">
-		<small>
-			Realizat pentru
-			<strong>
-				<a href="https://fiicode.asii.ro/" target="_blank" rel="noopener">FIICode 2018</a>
-			</strong> de către echipa
-			<strong>Discode</strong>.
-		</small>
+		<small>Realizat pentru <strong><a href="https://fiicode.asii.ro/" target="_blank" rel="noopener">FIICode 2018</a></strong> de către echipa <strong>Discode</strong>.</small>
 	</footer>
 </body>
 
